# mpipe-plus

./: .gitignore  pyproject.toml  setup.py
doc/: requirements.txt
mpipe_plus/: OrderedWorker.py  Pipeline.py  SimpleStage.py  Stage.py  TPipeline.py  TubeP.py  TubeQ.py  Worker.py  __init__.py  timer.py  tube_p.py  tube_q.py  work_exception.py
mpipe_plus/old/: FilterStage.py  FilterWorker.py  OrderedStage.py  OrderedWorker.py
src/: OrderedWorker.py  Pipeline.py  Stage.py  Tube.py  TubeP.py  TubeQ.py  __init__.py
test/: chain.py
